--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "homepage": "https://github.com/BloomyInDev/MineCord#readme",
     "devDependencies": {
         "@eslint/js": "^9.1.1",
+        "@types/node": "^20.12.7",
         "esbuild": "^0.20.2",
         "eslint": "^8.57.0",
         "prettier": "^3.2.5",
